[metadata]
name = napari-spine-seg
version = 0.0.1
classifiers =
    Framework :: napari

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    napari
    numpy
    scipy
    scikit-learn
    pandas
    qtpy
    albumentations
    tifffile
    torch
    tqdm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-spine-seg = napari_spine_seg: napari.yaml
